@@ -21,7 +21,7 @@ import store.novabook.front.api.member.address.dto.response.GetMemberAddressResp
 import store.novabook.front.api.member.address.service.MemberAddressClient;
 import store.novabook.front.common.response.ApiResponse;
 
-public class MemberAddressServiceImplTest {
+class MemberAddressServiceImplTest {
 
 	@Mock
 	private MemberAddressClient memberAddressClient;
@@ -36,49 +36,45 @@ public class MemberAddressServiceImplTest {
 
 	@Test
 	void testCreateMemberAddress() {
-		StreetAddress streetAddress = StreetAddress.builder()
+		StreetAddress streetAddresses = StreetAddress.builder()
 			.id(1L)
 			.zipcode("12345")
-			.streetAddress("123 Main St")
+			.streetAddresses("123 Main St")
 			.createdAt(LocalDateTime.now())
 			.updatedAt(LocalDateTime.now())
 			.build();
-		// Given
 		CreateMemberAddressRequest request = new CreateMemberAddressRequest("John Doe", "123 Street", "City", "12345");
-		CreateMemberAddressResponse expectedResponse = new CreateMemberAddressResponse(1L, streetAddress, "detail");
+		CreateMemberAddressResponse expectedResponse = new CreateMemberAddressResponse(1L, streetAddresses, "detail");
 
 		ApiResponse<CreateMemberAddressResponse> apiResponse = new ApiResponse<>("SUCCESS", true, expectedResponse);
 		when(memberAddressClient.createMemberAddress(request)).thenReturn(apiResponse);
 
-		// When
 		CreateMemberAddressResponse actualResponse = memberAddressService.createMemberAddress(request);
 
-		// Then
 		assertEquals(expectedResponse.id(), actualResponse.id());
 		verify(memberAddressClient, times(1)).createMemberAddress(request);
 	}
 
 	@Test
 	void testGetMemberAddressAll() {
-		// Given
 
 		GetMemberAddressResponse response = GetMemberAddressResponse.builder()
 			.id(1L)
-			.streetAddressId(2L)
+			.streetAddressesId(2L)
 			.memberId(3L)
 			.zipcode("12345")
 			.nickname("John Doe")
-			.streetAddress("123 Street")
+			.streetAddresses("123 Street")
 			.memberAddressDetail("Apt 101")
 			.build();
 
 		GetMemberAddressResponse response2 = GetMemberAddressResponse.builder()
 			.id(2L)
-			.streetAddressId(3L)
+			.streetAddressesId(3L)
 			.memberId(4L)
 			.zipcode("555")
 			.nickname("John Doe2")
-			.streetAddress("123 Street")
+			.streetAddresses("123 Street")
 			.memberAddressDetail("Apt 101")
 			.build();
 		GetMemberAddressListResponse responseBody = new GetMemberAddressListResponse(List.of(
@@ -88,15 +84,13 @@ public class MemberAddressServiceImplTest {
 		ApiResponse<GetMemberAddressListResponse> apiResponse = new ApiResponse<>("SUCCESS", true, responseBody);
 		when(memberAddressClient.getMemberAddressAll()).thenReturn(apiResponse);
 
-		// When
 		List<GetMemberAddressResponse> actualResponse = memberAddressService.getMemberAddressAll();
 
-		// Then
 		assertEquals(2, actualResponse.size());
-		assertEquals(1L, actualResponse.get(0).id());
-		assertEquals("John Doe", actualResponse.get(0).nickname());
-		assertEquals("123 Street", actualResponse.get(0).streetAddress());
-		assertEquals("12345", actualResponse.get(0).zipcode());
+		assertEquals(1L, actualResponse.getFirst().id());
+		assertEquals("John Doe", actualResponse.getFirst().nickname());
+		assertEquals("123 Street", actualResponse.getFirst().streetAddresses());
+		assertEquals("12345", actualResponse.getFirst().zipcode());
 
 
 		verify(memberAddressClient, times(1)).getMemberAddressAll();
@@ -104,26 +98,20 @@ public class MemberAddressServiceImplTest {
 
 	@Test
 	void testUpdateMemberAddress() {
-		// Given
 		Long memberAddressId = 1L;
 		UpdateMemberAddressRequest request = new UpdateMemberAddressRequest("456 Avenue", "Town", "67890", "detail");
 
-		// When
 		memberAddressService.updateMemberAddress(memberAddressId, request);
 
-		// Then
 		verify(memberAddressClient, times(1)).updateMemberAddress(memberAddressId, request);
 	}
 
 	@Test
 	void testDeleteMemberAddress() {
-		// Given
 		Long memberAddressId = 1L;
 
-		// When
 		memberAddressService.deleteMemberAddress(memberAddressId);
 
-		// Then
 		verify(memberAddressClient, times(1)).deleteMemberAddress(memberAddressId);
 	}
 
